cmake_minimum_required(VERSION 3.29)
project(city_ir_fx)

set(CMAKE_CXX_STANDARD 20)

add_executable(city_ir_fx
#        lecture1/BinModel01Sptr.cpp
#        lecture1/BinModel01Sptr.h
#        lecture1/Options03.cpp
#        lecture1/Options03.h
#        lecture1/ex1_8_singlescript.cpp
#        lecture1/ex1_8.cpp
#        lecture1/ex1_9.cpp

        lecture2/BinModel02.cpp
        lecture2/BinModel02.h
#        lecture2/Options04.cpp
#        lecture2/Options04.h
#        lecture2/Main08.cpp
#        lecture2/Options05.cpp
#        lecture2/Options05.h
#        lecture2/Main09.cpp
#        lecture2/Options06.cpp
#        lecture2/Options06.h
#        lecture2/Main10.cpp

#        lecture3/Options07.cpp
#        lecture3/Options07.h
#        lecture3/Main12.cpp
#        lecture3/Options08.cpp
#        lecture3/Options08.h
#        lecture3/BinLattice01.h
        lecture3/BinLattice02.h
        lecture3/Options09.cpp
        lecture3/Options09.h
#        lecture3/Main14.cpp
        lecture3/ex3_2.cpp

)
