cmake_minimum_required(VERSION 3.29)
project(city_ir_fx)

set(CMAKE_CXX_STANDARD 23)

add_executable(city_ir_fx
#        erdqlib/cppq/binomial/lecture1/BinModel01Sptr.cpp
#        erdqlib/cppq/binomial/lecture1/BinModel01Sptr.h
#        erdqlib/cppq/binomial/lecture1/Options03.cpp
#        erdqlib/cppq/binomial/lecture1/Options03.h
#        erdqlib/cppq/binomial/lecture1/ex1_8_singlescript.cpp
#        erdqlib/cppq/binomial/lecture1/ex1_8.cpp
#        erdqlib/cppq/binomial/lecture1/ex1_9.cpp
#
#        erdqlib/cppq/binomial/lecture2/BinModel02.cpp
#        erdqlib/cppq/binomial/lecture2/BinModel02.h
#        erdqlib/cppq/binomial/lecture2/Options04.cpp
#        erdqlib/cppq/binomial/lecture2/Options04.h
#        erdqlib/cppq/binomial/lecture2/Main08.cpp
#        erdqlib/cppq/binomial/lecture2/Options05.cpp
#        erdqlib/cppq/binomial/lecture2/Options05.h
#        erdqlib/cppq/binomial/lecture2/Main09.cpp
#        erdqlib/cppq/binomial/lecture2/Options06.cpp
#        erdqlib/cppq/binomial/lecture2/Options06.h
#        erdqlib/cppq/binomial/lecture2/Main10.cpp
#
#        erdqlib/cppq/binomial/lecture3/Options07.cpp
#        erdqlib/cppq/binomial/lecture3/Options07.h
#        erdqlib/cppq/binomial/lecture3/Main12.cpp
#        erdqlib/cppq/binomial/lecture3/Options08.cpp
#        erdqlib/cppq/binomial/lecture3/Options08.h
#        erdqlib/cppq/binomial/lecture3/BinLattice01.h
#        erdqlib/cppq/binomial/lecture3/BinLattice02.h
#        erdqlib/cppq/binomial/lecture3/Options09.cpp
#        erdqlib/cppq/binomial/lecture3/Options09.h
#        erdqlib/cppq/binomial/lecture3/Main14.cpp
#        erdqlib/cppq/binomial/lecture3/ex3_2.cpp

        erdqlib/cppq/montecarlo/BSModel01.cpp
        erdqlib/cppq/montecarlo/BSModel01.h
        erdqlib/cppq/montecarlo/PathDepOption01.cpp
        erdqlib/cppq/montecarlo/PathDepOption01.h
        erdqlib/cppq/montecarlo/Main.cpp
        erdqlib/cppq/montecarlo/OUModel.cpp
        erdqlib/cppq/montecarlo/OUModel.h
        erdqlib/cppq/montecarlo/ModelCommon.h
        erdqlib/cppq/montecarlo/Model.h
        erdqlib/cppq/montecarlo/ModelCommon.cpp
)
