[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erdqlib"
version = "0.1.0"
description = "A package for Q-Quant codes by Erood."
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "sdr2002@gmail.com", email = "sdr2002@gmail.com"}
]
dependencies = [
    "numpy",
    "matplotlib"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/cityuniv_Option-IR-CPP_emiliano"
